--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -4,5 +4,4 @@
 +font-face("GothamPro-Medium", "../fonts/GothamPro-Medium/GothamPro-Medium")
 +font-face("GothamPro-Black", "../fonts/GothamPro-Black/GothamPro-Black")
 +font-face("GothamPro-Bold", "../fonts/GothamPro-Bold/GothamPro-Bold")
-+font-face("Circe-Regular", "../fonts/Circe-Regular/Circe-Regular")
-+font-face("Circe-ExtraBold", "../fonts/Circe-ExtraBold/Circe-ExtraBold")
++font-face("Neucha", "../fonts/Neucha/Neucha")
