--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -2,8 +2,7 @@ $regular-font: "GothamPro", sans-serif
 $medium-font: "GothamPro-Medium", sans-serif
 $bold-font: "GothamPro-Bold", sans-serif
 $black-font: "GothamPro-Black", sans-serif
-$title-font: "Circe-Regular", sans-serif
-$title-bold: "Circe-ExtraBold", sans-serif
+$title-font: "Neucha", sans-serif
 $accent: #f1f519
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
